--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -7,8 +7,8 @@
 <body>
     <center>
         
-    <h1>ERROR</h1>
-    <p>Deu erro</p>
+    <h1>SITE COM ERRO: ENTRE EM CONTATO COM O CRIADOR</h1>
+    <p> INFELISMENTE NÃO DEU CERTO </p>
     </center>
 </body>
 </html>
