--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,136 +4,141 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Currículo - José Bezerra</title>
-        
     
+
     </head>
 
     <body>
-        <div class="container">
-                <h1>JOSÉ BEZERRA DA SILVA JUNIOR</h1>
-
-                <p class:" teste">Emprego: INSIDE SALES JUNIOR</p>
-                <p class:" teste">Nacionalidade: Brasileiro</p>
-                <p class:" teste">Data de nascimento: 2001-12-03</p>
-                <p class:" teste">Endereço: Travessa papacapim (Zona Sul)</p>
-                <p class:" teste">Telefone: (11)943320842</p>
-                <p class:" teste">E-mail: josebezerra.jr3@gmail.com</a></p>
-            
-
-                <h2>Objetivo</h2>
-                <p>Busco uma oportunidade onde possa combinar minha paixão pelo desenvolvimento de software, suporte ao cliente e minhas habilidades em análise de dados. Meu objetivo é colaborar em projetos desafiadores.</p>
-
-                <h2>Experiência</h2>
-                <strong>Inside sales junior</strong>
-                <p>Unentel Distribuição</p>
-                <p>São Paulo, Brasil</p>
-                <p>2022-05 - Presente</p>
-                
-
-                <h2>Educação</h2>
-                <strong>Análise e Desenvolvimento de Sistemas</strong>
-                <p>Centro Universitário Senac</p>
-                <p>São Paulo, Brasil</p>
-                <p>2022-01 - Presente</p>
-
-                <strong>Desenvolvimento de Sistemas e Técnico de T.I</strong>
-                <p>Instituto Nossa Senhora Fátima</p>
-                <p>São Paulo, Brasil</p>
-                <p>2019-01 - 2019-12</p>
-
-                <h2>Habilidades</h2>
-                <ul>
-                    <li> - Photoshop (Senai)</li>
-                    <li> - HTML E CSS (Desenvolvimento Web)</li>
-                    <li> - Montagem e manutenção de Microcomputadores (Senai)</li>
-                    <li> - UX/DESIGN</li>
-                    <li> - FIGMAN</li>
-                    
-                </ul>
-
-                <h2>Idiomas</h2>
-                <ul>
-                    <li>Português</li>
-                </ul>
-
+        <h1>Curriculo - José Bezerra Da Silva Junior</h1>
+      
+        <ul id="menu">
+          <li class="ativo">Resumido</li>
+          <li><a href="meu curriculo html/Completo.html">Completo</a></li>
+        </ul>
+      
+        <div class="secao">
+          <h2>Dados Pessoais</h2>
+          <div id="hcard-Ademir-Mazer-Jr" class="vcard">
+            <a class="url fn n" href="https://www.linkedin.com/in/jos%C3%A9-bezerra-42421a203/"> <span class="given-name">José</span>
+              <span class="additional-name">Bezerra</span>
+              <span class="family-name">Junior</span>
+            </a>
+          </div>
         </div>
-    </body>
+      
+        <div class="secao">
+          <h2>Dados Profissionais</h2>
+      
+          <p><label>Empresa</label>Unentel</p>
+          <p><label>Empresa</label>Sonda Supermercados</p>
+          <p><label>Empresa</label>Autonomo</p>
+        </div>
 
-
-
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        <div class="secao">
+            <h2>Dados Profissionais</h2>
+        
+            <p><label>Empresa</label>Unentel</p>
+            <p><label>Empresa</label>Sonda Supermercados</p>
+            <p><label>Empresa</label>Autonomo</p>
+          </div>
+      
+        <style>
+          body {
+            font: 14px "Lucida Grande", "Trebuchet MS", Verdana, sans-serif;
+            color: #3b3b3b;
+          }
+      
+          h1,
+          h2 {
+            font-family: Georgia;
+          }
+      
+          h1 {
+            border-bottom: 3px solid #aaa;
+            background-color: #3b3b3b;
+            color: #ddd;
+            padding: 5px;
+          }
+      
+          h2 {
+            border-top: 1px solid #ccc;
+            border-bottom: 1px solid #ccc;
+            background-color: #DDD;
+            padding-left: 5px;
+            margin: 0 0 0 -15px;
+            font-weight: normal;
+          }
+      
+          .secao {
+            background-color: #eee;
+            padding-left: 15px;
+          }
+      
+          label {
+            font-weight: bold;
+            margin-right: 10px;
+          }
+      
+          label:after {
+            content: ":";
+          }
+      
+          a {
+            text-decoration: none;
+            color: #f33;
+          }
+      
+          a:visited {
+            text-decoration: none;
+            color: #700;
+          }
+      
+          a:hover {
+            text-decoration: none;
+            color: #fa0;
+          }
+      
+          #menu {
+            margin: 0;
+          }
+      
+          #menu ul,
+          #menu li {
+            display: inline;
+            list-style-type: none;
             margin: 0;
             padding: 0;
-            background-color: #eaf2f8;
-            color: #4a4a4a;
-            line-height: 1.6;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            overflow: auto;
-        }
-        
-        .container {
-            margin-top: 2210px;
-            background-color: white;
-            padding: 40px;
-            border-radius: 8px;
-            width: 70%;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            max-width: 800px;
-        }
-        
-        h1 {
-            border-bottom: 2px solid #3498db;
-            padding-bottom: 10px;
-            color: #3498db;
-            text-align: center;
-        }
-        
-        h2 {
-            margin-top: 30px;
-            margin-bottom: 15px;
-            color: #555;
-            text-align: center;
-            background: linear-gradient(to right, #eaf2f8, #aab7c4, #eaf2f8);
+          }
+      
+          #menu .ativo {
+            background-color: #ddd;
+          }
+      
+          .vcard {
             padding: 5px;
-            border-radius: 4px;
-        }
-        
-        a {
-            color: #3498db;
-        }
-        
-        a:hover {
-            text-decoration: underline;
-        }
-        
-        ul {
-            list-style-type: none;
-            padding-left: 20px;
-        }
-        
-        li {
-            margin-bottom: 5px;
-            padding: 2px 0;
-            border-bottom: 1px solid #f1f1f1;
-        }
-        
-        li:last-child {
-            border-bottom: none;
-        }
-        
-        p,
-        strong {
-            margin-bottom: 10px;
-        }
-        
-        strong {
+          }
+      
+          .url,
+          .email {
             display: block;
-            font-size: 1.1em;
-        }
-    </style>
+          }
+      
+          .photo {
+            float: right;
+            margin-right: 20%;
+          }
+      
+          #footnote {
+            border-top: 1px dashed #aaa;
+            padding: 5px;
+            font: 75% "Lucida Grande", "Trebuchet MS", Verdana, sans-serif;
+      
+          }
+      
+          #footnote li {
+            list-style-type: none;
+            margin-top: 3px;
+          }
+        </style>
+      </body>
 </html>
